@@ -146,23 +146,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>${mainclass}</mainClass>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>create-runtime-image</id>
-                        <goals>
-                            <goal>jlink</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
-            </plugin-->
             <plugin>
                 <groupId>one.jpro</groupId>
                 <artifactId>jpro-maven-plugin</artifactId>
@@ -173,164 +156,4 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>linux</id>
-            <activation>
-                <os>
-                    <name>will-be-linux</name>
-                </os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.akman</groupId>
-                        <artifactId>jpackage-maven-plugin</artifactId>
-                        <version>0.1.5</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.ow2.asm</groupId>
-                                <artifactId>asm</artifactId>
-                                <version>9.5</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>jpackage</goal>
-                                </goals>
-                                <phase>verify</phase>
-                                <configuration>
-                                    <name>${project.artifactId}</name>
-                                    <appversion>${project.version}</appversion>
-                                    <copyright>${project.licenses}</copyright>
-                                    <description>${project.description}</description>
-                                    <licensefile>LICENSE</licensefile>
-                                    <modulepath>
-                                        <dependencysets>
-                                            <dependencyset>
-                                                <includeoutput>false</includeoutput>
-                                                <excludeautomatic>true</excludeautomatic>
-                                                <includes>
-                                                    <include>glob:**/javafx-*-linux.jar</include>
-                                                </includes>
-                                            </dependencyset>
-                                        </dependencysets>
-                                        <dirsets>
-                                            <dirset>
-                                                <directory>target</directory>
-                                                <includes>
-                                                    <include>**/*</include>
-                                                </includes>
-                                                <excludes>
-                                                    <exclude>**/*Test</exclude>
-                                                </excludes>
-                                                <followSymlinks>true</followSymlinks>
-                                            </dirset>
-                                        </dirsets>
-                                    </modulepath>
-                                    <addmodules>
-                                        <addmodule>javafx.controls</addmodule>
-                                    </addmodules>
-                                    <mainjar>testfx-${project.version}.jar</mainjar>
-                                    <mainclass>${mainclass}</mainclass>
-                                    <input>${jpackageInputDirectory}</input>
-                                    <verbose>true</verbose>
-                                    <javaoptions>--enable-preview</javaoptions>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.gluonhq</groupId>
-                        <artifactId>gluonfx-maven-plugin</artifactId>
-                        <version>${gluonfx.plugin.version}</version>
-                        <configuration>
-                            <mainClass>${mainclass}</mainClass>
-                            <target>android</target>
-                            <attachList>
-                                <list>display</list>
-                                <list>lifecycle</list>
-                                <list>statusbar</list>
-                                <list>storage</list>
-                            </attachList>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>windows</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.akman</groupId>
-                        <artifactId>jpackage-maven-plugin</artifactId>
-                        <version>0.1.5</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.ow2.asm</groupId>
-                                <artifactId>asm</artifactId>
-                                <version>9.5</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>jpackage</goal>
-                                </goals>
-                                <phase>verify</phase>
-                                <configuration>
-                                    <name>${project.artifactId}</name>
-                                    <appversion>${project.version}</appversion>
-                                    <copyright>${project.licenses}</copyright>
-                                    <description>${project.description}</description>
-                                    <licensefile>LICENSE</licensefile>
-                                    <modulepath>
-                                        <dependencysets>
-                                            <dependencyset>
-                                                <includeoutput>false</includeoutput>
-                                                <excludeautomatic>true</excludeautomatic>
-                                                <includes>
-                                                    <!-- todo would it be better
-													to
-											fetch jmods and use them? -->
-                                                    <include>glob:**/javafx-*-win.jar</include>
-                                                </includes>
-                                            </dependencyset>
-                                        </dependencysets>
-                                        <dirsets>
-                                            <dirset>
-                                                <directory>target</directory>
-                                                <includes>
-                                                    <include>**/*</include>
-                                                </includes>
-                                                <excludes>
-                                                    <exclude>**/*Test</exclude>
-                                                </excludes>
-                                                <followSymlinks>true</followSymlinks>
-                                            </dirset>
-                                        </dirsets>
-                                    </modulepath>
-                                    <addmodules>
-                                        <addmodule>javafx.controls</addmodule>
-                                    </addmodules>
-                                    <mainjar>testfx-${project.version}.jar</mainjar>
-                                    <mainclass>${mainclass}</mainclass>
-                                    <input>${jpackageInputDirectory}</input>
-                                    <verbose>true</verbose>
-                                    <javaoptions>--enable-preview</javaoptions>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
